aws-msk/msk-emr-s3/terraform/modules/vpc/main.tf
resource "aws_vpc" "this" {

  cidr_block = "10.0.0.0/16"

  enable_dns_support = true

  enable_dns_hostnames = true

  tags = {

    Name                                       = "${var.project_name}-vpc"
    "for-use-with-amazon-emr-managed-policies" = "true"

  }

}

resource "aws_internet_gateway" "this" {

  vpc_id = aws_vpc.this.id

  tags = {

    Name = "${var.project_name}-igw"

  }

}

resource "aws_subnet" "public_a" {

  vpc_id = aws_vpc.this.id

  cidr_block = "10.0.1.0/24"

  availability_zone = "ap-south-1a"

  map_public_ip_on_launch = true

  tags = {

    Name                                       = "${var.project_name}-public-a"
    "for-use-with-amazon-emr-managed-policies" = "true"

  }

}

resource "aws_subnet" "public_b" {

  vpc_id = aws_vpc.this.id

  cidr_block = "10.0.2.0/24"

  availability_zone = "ap-south-1b"

  map_public_ip_on_launch = true

  tags = {

    Name                                       = "${var.project_name}-public-b"
    "for-use-with-amazon-emr-managed-policies" = "true"

  }

}

resource "aws_subnet" "private_a" {

  vpc_id = aws_vpc.this.id

  cidr_block = "10.0.11.0/24"

  availability_zone = "ap-south-1a"

  tags = {

    Name                                       = "${var.project_name}-private-a"
    "for-use-with-amazon-emr-managed-policies" = "true"

  }

}

resource "aws_subnet" "private_b" {

  vpc_id = aws_vpc.this.id

  cidr_block = "10.0.12.0/24"

  availability_zone = "ap-south-1b"

  tags = {

    Name                                       = "${var.project_name}-private-b"
    "for-use-with-amazon-emr-managed-policies" = "true"

  }

}

resource "aws_eip" "nat" {

  domain = "vpc"

  tags = {

    Name = "${var.project_name}-nat-eip"

  }

}

resource "aws_nat_gateway" "this" {

  subnet_id = aws_subnet.public_a.id

  allocation_id = aws_eip.nat.id

  tags = {

    Name = "${var.project_name}-nat"

  }

  depends_on = [

    aws_internet_gateway.this

  ]

}

resource "aws_route_table" "public" {

  vpc_id = aws_vpc.this.id

  route {

    cidr_block = "0.0.0.0/0"

    gateway_id = aws_internet_gateway.this.id

  }

}

resource "aws_route_table_association" "public_a" {

  subnet_id = aws_subnet.public_a.id

  route_table_id = aws_route_table.public.id

}

resource "aws_route_table_association" "public_b" {

  subnet_id = aws_subnet.public_b.id

  route_table_id = aws_route_table.public.id

}

resource "aws_route_table" "private" {

  vpc_id = aws_vpc.this.id

  route {

    cidr_block = "0.0.0.0/0"

    nat_gateway_id = aws_nat_gateway.this.id

  }

}

resource "aws_route_table_association" "private_a" {

  subnet_id = aws_subnet.private_a.id

  route_table_id = aws_route_table.private.id

}

resource "aws_route_table_association" "private_b" {

  subnet_id = aws_subnet.private_b.id

  route_table_id = aws_route_table.private.id

}
